--- a/app/src/main/res/layout/layout_1_13_alt.xml
+++ b/app/src/main/res/layout/layout_1_13_alt.xml
@@ -3,34 +3,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="136dp"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_gravity="end"
         android:gravity="center"
         android:text="@string/hello"
         android:background="#E162A336"
         android:textColor="#3E2723" />
 
+    <Space
+        android:layout_width="150dp"
+        android:layout_height="match_parent"
+        />
+
     <Button
-        android:layout_width="136dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/button1" />
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="136dp"
-        android:layout_height="0dp"
-        android:layout_gravity="end"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#3e2342" />
-
 
 </LinearLayout>
