--- a/app/src/main/res/layout/layout_1_22.xml
+++ b/app/src/main/res/layout/layout_1_22.xml
@@ -7,29 +7,29 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_gravity="end"
         android:layout_weight="1"
-        android:layout_marginStart="250dp"
+        android:background="#E162A336"
         android:gravity="center"
         android:text="@string/hello"
-        android:background="#E162A336"
         android:textColor="#3E2723" />
 
     <Button
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="100dp"
+        android:layout_gravity="center"
         android:layout_weight="1"
         android:text="@string/button1" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_gravity="end"
         android:layout_weight="1"
-        android:layout_marginStart="250dp"
         android:background="#3e2342" />
 
 
